--- a/src/components/Photo/PhotoCommentsForm.module.css
+++ b/src/components/Photo/PhotoCommentsForm.module.css
@@ -35,6 +35,24 @@
   overflow: hidden;
 }
 
-.button:focus svg, .button:hover svg{
-  
+.button:focus, .button:hover{
+  outline: none;
+}
+
+.button:focus svg path, .button:hover svg path{
+  fill:#fea;
+  stroke: #fb1;
+}
+
+.button:focus svg g, .button:hover svg g{
+  animation: latir .6s infinite;
+}
+
+@keyframes latir {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
 }
