adicionando graficos e etc..

--- a/src/components/Photo/PhotoComments.module.css
+++ b/src/components/Photo/PhotoComments.module.css
@@ -1,8 +1,13 @@
 .comments{
   overflow-y: auto;
   word-break: break-word;
-  padding: 0.2rem;
+  padding: 0 2rem;
 }
+
+.single.comments {
+  padding: 0px;
+}
+
 .comments li {
   margin-bottom: .5rem;
   line-height: 1.2;
